# aflplusplus-examples

./: LICENSE  README.md
example1/: CMakeLists.txt  simple_crash.cpp
example2/: CMakeLists.txt  CMakePresets.json  simple_crash.cpp
example2/seeds/: seed_0  seed_2
example3/: CMakePresets.json  simple_crash.cpp
example3/seeds/: seed_1
example4/: CMakeLists.txt  dictionary.dict  simple_crash.cpp
example5/: CMakeLists.txt  custom_mutator.c  simple_crash.cpp
example5/seeds/: seed_3  seed_4
example6/: CMakeLists.txt  custom_mutator.py  simple_crash.cpp
example7/: CMakeLists.txt  simple_crash.cpp
